--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
 <body>
     <!-- header start -->
     <header>
-
+        <div class="nav-bar">
+            <div class="name-icon">
+                <img src="images/icons/logo.png" alt="">
+                <span class="name">Idea</span>
+            </div>
+            <div class="profile-nav">
+                <nav>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Works</a></li>
+                    </ul>
+                </nav>
+                <img src="images/icons/profile.png" alt="">
+            </div>
+        </div>
     </header>
     <!-- header end -->
 
